@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/quassel
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.192 2015/03/02 09:29:54 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.193 2015/03/12 19:12:34 johu Exp $
+
+*quassel-0.12_rc1 (12 Mar 2015)
+
+  12 Mar 2015; Johannes Huber <johu@gentoo.org> +quassel-0.12_rc1.ebuild,
+  -quassel-0.12_beta1.ebuild:
+  Version bump.
 
   02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> quassel-0.10.0-r1.ebuild:
   Stable for ppc, wrt bug #516836
